Refactor reset password function